--- a/src/assets/css/Properties/PropertyDetail.css
+++ b/src/assets/css/Properties/PropertyDetail.css
@@ -556,9 +556,15 @@
   margin-bottom: 2rem;
 }
 
+.map-container {
+  width: 100%;
+  height: 400px;
+}
+
 .btn-primary,
 .btn-secondary,
-.btn-login {
+.btn-login,
+.btn-owner {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -569,6 +575,19 @@
   font-weight: 700;
   cursor: pointer;
   transition: all 0.3s ease;
+}
+
+.btn-owner[disabled] {
+  background: linear-gradient(135deg, #9ca3af 0%, #6b7280 100%); /* gris */
+  cursor: not-allowed;
+  box-shadow: none;
+  opacity: 0.7;
+  color: #ccc;
+}
+
+/* Evitar clics visuales */
+.btn-owner[disabled]:active {
+  transform: none;
 }
 
 .btn-full {
